--- a/pali-phonetics-and-pronunciation.html
+++ b/pali-phonetics-and-pronunciation.html
@@ -196,6 +196,7 @@ consonants. They are then pronounced as in ‘g<strong>e</strong>t’ and ‘<st
 <p><strong>ṁ, ṅ</strong> as <strong>ng</strong> in sa<strong>ng</strong></p>
 <p><strong>ñ</strong> as <strong>ny</strong> in ca<strong>ny</strong>on</p>
 <p><strong>v</strong> rather softer than the English <strong>v</strong>; near <strong>w</strong></p>
+<p><strong>cc</strong> is a double <strong>c</strong> as in Fibona<strong>cc</strong>i, never pronounced as in a<strong>cc</strong>ount</p>
 <h3 id="aspirated-consonants"><a class="header" href="#aspirated-consonants">Aspirated consonants</a></h3>
 <p><strong>bh ch dh ḍh gh jh kh ph th ṭh</strong></p>
 <p>These two-lettered notations with <strong>h</strong> denote an aspirated, airy sound,
