--- a/vinaya/rains-and-kathina.html
+++ b/vinaya/rains-and-kathina.html
@@ -206,6 +206,7 @@
 <li><a href="#kathina-sanghakamma">Kaṭhina Saṅghakamma</a></li>
 <li><a href="#spreading-the-kathina">Spreading the Kaṭhina</a></li>
 <li><a href="#kathina-anumodana">Kaṭhina Anumodanā</a></li>
+<li><a href="#offering-pamsukula">Offering Paṁsukūla-cloth</a></li>
 </ul>
 </li>
 </ul>
@@ -491,6 +492,24 @@ unanimously decides to revoke them. The Rains privileges also lapse
 automatically with the ending of the two constraints: with regard to the
 residence and with regard to making a robe.</p>
 <p><em>Vin.III.261</em></p>
+<h3 id="offering-paṁsukūla-cloth"><a class="header" href="#offering-paṁsukūla-cloth">Offering Paṁsukūla-cloth<a id="offering-pamsukula"></a></a></h3>
+<p>If the community during the Vassa has been less than five bhikkhus, the lay
+supporters may organize a Paṁsukūla-cloth offering ceremony (ผ้าป่า <em>pha pah</em>)
+instead of a <em>Kaṭhina</em>. After the cloth is offered, sewing it into a robe is
+optional.</p>
+<blockquote>
+<p>Mayaṁ bhante, imasmiṁ Kaṭhina samaye,
+imāni paṁsukūlacīvarāni, saparivārāni,
+saṅghassa oṇojayāma.</p>
+<p>Sādhu no bhante saṅgho, imāni paṁsukūlacīvarāni, saparivārāni, paṭiggaṇhātu.
+Amhākaṁ dīgharattaṁ hitāya sukhāya.</p>
+</blockquote>
+<div class="english">
+<p><em>May we, Venerable Sirs, in this Kaṭhina season,
+offer these Paṁsukūla-cloths to the Saṅgha, together with other requisites.</em></p>
+<p><em>Please accept these Paṁsukūla-cloths and other requisites,
+for our long lasting welfare and happiness.</em></p>
+</div>
 
                     </main>
 
