--- a/chants/parittas.html
+++ b/chants/parittas.html
@@ -1258,7 +1258,7 @@ Ratanaṁ dhammasamaṁ<br />
 Yaṅkiñci ratanaṁ loke<br />
 <span class="vin"></span>vijjati vividhaṁ puthu<br />
 Ratanaṁ saṅghasamaṁ<br />
-<span class="vin"></span>natthi tasmā sotthī bhavantu te\</p>
+<span class="vin"></span>natthi tasmā sotthī bhavantu te</p>
 <h3 id="sakkatvā-buddharatanaṁ"><a class="header" href="#sakkatvā-buddharatanaṁ">Sakkatvā buddharatanaṁ<a id="sakkatva"></a></a></h3>
 <p>Sakkatvā buddharatanaṁ<br />
 <span class="vin"></span>osadhaṁ uttamaṁ varaṁ<br />
