--- a/print.html
+++ b/print.html
@@ -3415,7 +3415,7 @@ Ratanaṁ dhammasamaṁ<br />
 Yaṅkiñci ratanaṁ loke<br />
 <span class="vin"></span>vijjati vividhaṁ puthu<br />
 Ratanaṁ saṅghasamaṁ<br />
-<span class="vin"></span>natthi tasmā sotthī bhavantu te\</p>
+<span class="vin"></span>natthi tasmā sotthī bhavantu te</p>
 <h3 id="sakkatvā-buddharatanaṁ"><a class="header" href="#sakkatvā-buddharatanaṁ">Sakkatvā buddharatanaṁ<a id="sakkatva"></a></a></h3>
 <p>Sakkatvā buddharatanaṁ<br />
 <span class="vin"></span>osadhaṁ uttamaṁ varaṁ<br />
@@ -8419,15 +8419,15 @@ residence and with regard to making a robe.</p>
 <p><em>Vin.III.261</em></p>
 <h3 id="offering-paṁsukūla-cloth"><a class="header" href="#offering-paṁsukūla-cloth">Offering Paṁsukūla-cloth<a id="offering-pamsukula"></a></a></h3>
 <p>If the community during the Vassa has been less than five bhikkhus, the lay
-supporters may organize a Paṁsukūla-cloth offering ceremony (ผ้าป่า <em>pha pah</em>)
+supporters may organize a Paṁsukūla-cloth offering ceremony (ผ้าป่า <em>phā pā</em>)
 instead of a <em>Kaṭhina</em>. After the cloth is offered, sewing it into a robe is
 optional.</p>
 <blockquote>
-<p>Mayaṁ bhante, imasmiṁ Kaṭhina samaye,
-imāni paṁsukūlacīvarāni, saparivārāni,
-saṅghassa oṇojayāma.</p>
-<p>Sādhu no bhante saṅgho, imāni paṁsukūlacīvarāni, saparivārāni, paṭiggaṇhātu.
-Amhākaṁ dīgharattaṁ hitāya sukhāya.</p>
+<p>Mayaṁ bhante, imasmiṁ kaṭhinasamaye,
+imāni paṁsukūlacīvarāni saparivārāni saṅghassa oṇojayāma.</p>
+<p>Sādhu no bhante saṅgho,
+imāni paṁsukūlacīvarāni saparivārāni paṭiggaṇhātu,
+amhākaṁ dīgharattaṁ hitāya sukhāya.</p>
 </blockquote>
 <div class="english">
 <p><em>May we, Venerable Sirs, in this Kaṭhina season,
