--- a/vinaya/rains-and-kathina.html
+++ b/vinaya/rains-and-kathina.html
@@ -494,15 +494,15 @@ residence and with regard to making a robe.</p>
 <p><em>Vin.III.261</em></p>
 <h3 id="offering-paṁsukūla-cloth"><a class="header" href="#offering-paṁsukūla-cloth">Offering Paṁsukūla-cloth<a id="offering-pamsukula"></a></a></h3>
 <p>If the community during the Vassa has been less than five bhikkhus, the lay
-supporters may organize a Paṁsukūla-cloth offering ceremony (ผ้าป่า <em>pha pah</em>)
+supporters may organize a Paṁsukūla-cloth offering ceremony (ผ้าป่า <em>phā pā</em>)
 instead of a <em>Kaṭhina</em>. After the cloth is offered, sewing it into a robe is
 optional.</p>
 <blockquote>
-<p>Mayaṁ bhante, imasmiṁ Kaṭhina samaye,
-imāni paṁsukūlacīvarāni, saparivārāni,
-saṅghassa oṇojayāma.</p>
-<p>Sādhu no bhante saṅgho, imāni paṁsukūlacīvarāni, saparivārāni, paṭiggaṇhātu.
-Amhākaṁ dīgharattaṁ hitāya sukhāya.</p>
+<p>Mayaṁ bhante, imasmiṁ kaṭhinasamaye,
+imāni paṁsukūlacīvarāni saparivārāni saṅghassa oṇojayāma.</p>
+<p>Sādhu no bhante saṅgho,
+imāni paṁsukūlacīvarāni saparivārāni paṭiggaṇhātu,
+amhākaṁ dīgharattaṁ hitāya sukhāya.</p>
 </blockquote>
 <div class="english">
 <p><em>May we, Venerable Sirs, in this Kaṭhina season,
