--- a/chants/anumodana.html
+++ b/chants/anumodana.html
@@ -370,6 +370,7 @@ and at peace.</p>
 </blockquote>
 </div>
 <h2 id="bhojana-dānānumodanā"><a class="header" href="#bhojana-dānānumodanā">Bhojana-dānānumodanā<a id="bhojana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-02-19/">here</a>)</p>
 <p>Āyu-do bala-do dhīro<br />
 <span class="vin"></span>vaṇṇa-do paṭibhāṇa-do<br />
 Sukhassa dātā medhāvī<br />
@@ -418,6 +419,7 @@ Whether becoming a deva or a human being, rejoices, having attained the supreme.
 </div>
 <p><em>A.II.35; A.III.36</em></p>
 <h2 id="adāsi-me-ādi-gāthā"><a class="header" href="#adāsi-me-ādi-gāthā">Adāsi-me ādi-gāthā<a id="adasi-me"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-04-16/">here</a>)</p>
 <p>Adāsi me akāsi me<br />
 <span class="vin"></span>ñāti-mittā sakhā ca me<br />
 Petānaṁ dakkhiṇaṁ dajjā<br />
@@ -450,6 +452,7 @@ monks have been given strength: You have acquried merit that is not small.</p>
 </div>
 <p><em>Khp.VII.v10-13</em></p>
 <h2 id="kāla-dāna-sutta-gāthā"><a class="header" href="#kāla-dāna-sutta-gāthā">Kāla-dāna-sutta-gāthā<a id="kala-dana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-09-30/">here</a>)</p>
 <p>Kāle dadanti sapaññā<br />
 <span class="vin"></span>vadaññū vīta-maccharā<br />
 Kālena dinnaṁ ariyesu<br />
