--- a/chants/parittas.html
+++ b/chants/parittas.html
@@ -1191,6 +1191,7 @@ Bhayaṁ vā chambhitattaṁ vā<br />
 Loma-haṁso na hessatī’ti.</p>
 <p><em>S.I.219-220</em></p>
 <h3 id="Āṭānāṭiya-paritta-short"><a class="header" href="#Āṭānāṭiya-paritta-short">Āṭānāṭiya-paritta (short)<a id="vipassissa"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-10-15/">here</a>)</p>
 <p>Vipassissa nam’atthu<br />
 <span class="vin"></span>cakkhumantassa sirīmato<br />
 Sikhissa pi nam’atthu<br />
@@ -1305,6 +1306,7 @@ and so may the child in your womb.</p>
 </blockquote>
 </div>
 <h3 id="bojjhaṅga-paritta"><a class="header" href="#bojjhaṅga-paritta">Bojjhaṅga-paritta<a id="bojjhango"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-01-22/">here</a>)</p>
 <p>Bojjhaṅgo sati-saṅkhāto<br />
 <span class="vin"></span>dhammānaṁ vicayo tathā<br />
 Viriyam-pīti-passaddhi<br />
@@ -1496,6 +1498,7 @@ recites or recalls them day after day without lapsing,<br />
 destroying all kinds of obstacles,<br />
 will attain liberation and happiness.</p>
 <h3 id="jaya-paritta"><a class="header" href="#jaya-paritta">Jaya-paritta<a id="maha-karuniko"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-08-19/">here</a>)</p>
 <p>Mahā-kāruṇiko nātho<br />
 Hitāya sabba-pāṇinaṁ<br />
 Pūretvā pāramī sabbā<br />
