--- a/chants/patimokkha-chants.html
+++ b/chants/patimokkha-chants.html
@@ -285,6 +285,7 @@ for me.</p>
 </blockquote>
 </div>
 <h2 id="sīluddesa-pāṭha"><a class="header" href="#sīluddesa-pāṭha">Sīl’uddesa-pāṭha<a id="sil-uddesa"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-08-12/">here</a>)</p>
 <blockquote>
 <p>[Handa mayaṁ sīl’uddesa-pāṭhaṁ bhaṇāmase]</p>
 </blockquote>
@@ -320,6 +321,7 @@ faults.’ Thus indeed we should train ourselves.</p>
 </div>
 <p><em>D.I.63; D.III.266f</em></p>
 <h2 id="tāyana-gāthā"><a class="header" href="#tāyana-gāthā">Tāyana-gāthā<a id="tayana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-05-14/">here</a>)</p>
 <p><em>The Verses of Tāyana</em></p>
 <blockquote>
 <p>[Handa mayaṁ tāyana-gāthāyo bhaṇāmase]</p>
