--- a/print.html
+++ b/print.html
@@ -3348,6 +3348,7 @@ Bhayaṁ vā chambhitattaṁ vā<br />
 Loma-haṁso na hessatī’ti.</p>
 <p><em>S.I.219-220</em></p>
 <h3 id="Āṭānāṭiya-paritta-short"><a class="header" href="#Āṭānāṭiya-paritta-short">Āṭānāṭiya-paritta (short)<a id="vipassissa"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-10-15/">here</a>)</p>
 <p>Vipassissa nam’atthu<br />
 <span class="vin"></span>cakkhumantassa sirīmato<br />
 Sikhissa pi nam’atthu<br />
@@ -3462,6 +3463,7 @@ and so may the child in your womb.</p>
 </blockquote>
 </div>
 <h3 id="bojjhaṅga-paritta"><a class="header" href="#bojjhaṅga-paritta">Bojjhaṅga-paritta<a id="bojjhango"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-01-22/">here</a>)</p>
 <p>Bojjhaṅgo sati-saṅkhāto<br />
 <span class="vin"></span>dhammānaṁ vicayo tathā<br />
 Viriyam-pīti-passaddhi<br />
@@ -3653,6 +3655,7 @@ recites or recalls them day after day without lapsing,<br />
 destroying all kinds of obstacles,<br />
 will attain liberation and happiness.</p>
 <h3 id="jaya-paritta"><a class="header" href="#jaya-paritta">Jaya-paritta<a id="maha-karuniko"></a></a></h3>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-08-19/">here</a>)</p>
 <p>Mahā-kāruṇiko nātho<br />
 Hitāya sabba-pāṇinaṁ<br />
 Pūretvā pāramī sabbā<br />
@@ -4608,6 +4611,7 @@ and at peace.</p>
 </blockquote>
 </div>
 <h2 id="bhojana-dānānumodanā"><a class="header" href="#bhojana-dānānumodanā">Bhojana-dānānumodanā<a id="bhojana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-02-19/">here</a>)</p>
 <p>Āyu-do bala-do dhīro<br />
 <span class="vin"></span>vaṇṇa-do paṭibhāṇa-do<br />
 Sukhassa dātā medhāvī<br />
@@ -4656,6 +4660,7 @@ Whether becoming a deva or a human being, rejoices, having attained the supreme.
 </div>
 <p><em>A.II.35; A.III.36</em></p>
 <h2 id="adāsi-me-ādi-gāthā"><a class="header" href="#adāsi-me-ādi-gāthā">Adāsi-me ādi-gāthā<a id="adasi-me"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-04-16/">here</a>)</p>
 <p>Adāsi me akāsi me<br />
 <span class="vin"></span>ñāti-mittā sakhā ca me<br />
 Petānaṁ dakkhiṇaṁ dajjā<br />
@@ -4688,6 +4693,7 @@ monks have been given strength: You have acquried merit that is not small.</p>
 </div>
 <p><em>Khp.VII.v10-13</em></p>
 <h2 id="kāla-dāna-sutta-gāthā"><a class="header" href="#kāla-dāna-sutta-gāthā">Kāla-dāna-sutta-gāthā<a id="kala-dana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-09-30/">here</a>)</p>
 <p>Kāle dadanti sapaññā<br />
 <span class="vin"></span>vadaññū vīta-maccharā<br />
 Kālena dinnaṁ ariyesu<br />
@@ -6862,6 +6868,7 @@ for me.</p>
 </blockquote>
 </div>
 <h2 id="sīluddesa-pāṭha"><a class="header" href="#sīluddesa-pāṭha">Sīl’uddesa-pāṭha<a id="sil-uddesa"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-08-12/">here</a>)</p>
 <blockquote>
 <p>[Handa mayaṁ sīl’uddesa-pāṭhaṁ bhaṇāmase]</p>
 </blockquote>
@@ -6897,6 +6904,7 @@ faults.’ Thus indeed we should train ourselves.</p>
 </div>
 <p><em>D.I.63; D.III.266f</em></p>
 <h2 id="tāyana-gāthā"><a class="header" href="#tāyana-gāthā">Tāyana-gāthā<a id="tayana"></a></a></h2>
+<p>(See a word-by-word analysis <a href="https://pali-sutta-readings.github.io/readings/2025-05-14/">here</a>)</p>
 <p><em>The Verses of Tāyana</em></p>
 <blockquote>
 <p>[Handa mayaṁ tāyana-gāthāyo bhaṇāmase]</p>
